--- a/index.html
+++ b/index.html
@@ -1,169 +1,12 @@
-cabbagehall.co.uk";
-$subject = "Contact from Web site";
+<!doctype html>
+<html>
 
-$comments .= "Name: $_POST[name]";
-$comments .= "\nEmail: $_POST[email]";
-$comments .= "\nPhone: $_POST[phone]";
-$comments .= "\nType of enquiry: $_POST[type]";
-$comments .= "\n\n$_POST[enquiry]";
+<head>
+<title>Cabbagehall</title>
 
-$email = $_POST['email'];
+</head>
+<body>
 
-mail ($emailaddy, $subject, $comments, "From: $email");
-echo "<b>Thank you for your enquiry.</b><br><br>We will contact you as soon as possible.";
-?>
-<?
-} else {			  
-			   ?>
-<table width="100%" border="0" cellspacing="0" cellpadding="0">
-  <tr valign="top">
-<td width="50%"><p><b>Contacting us by email:</b></p>
-<table width="100%" border="0" cellspacing="0" cellpadding="0" align="center">
-<tr>
-<td width="9%"><div align="center"></div></td>
-<td width="91%"><a href="mailto:info@cabbagehall.co.uk">info@cabbagehall.co.uk</a></td>
-</tr>
-</table>
-<p><b>Contacting us by Mobile:</b></p>
-<table width="100%" border="0" cellspacing="0" cellpadding="0" align="center">
-<tr>
-<td width="19%">&nbsp;</td>
-<td width="81%">0780 2436826</a></td>
-</tr>
-</table>
-<p><b>Contacting us by Landline:</b></p>
-<table width="100%" border="0" cellspacing="0" cellpadding="0" align="center">
-<tr>
-<td width="9%" height="4">&nbsp;</td>
-                      <td width="91%" height="4">01592742318  (Phone Not Attended)</td>
-</tr>
-</table>
-<p><b>Contacting us by Post:</b></p>
-<table width="100%" border="0" cellspacing="0" cellpadding="0" align="center">
-<tr>
-<td width="9%" height="4" valign="top"><div align="center"></div></td>
-<td width="91%" height="4">Cabbagehall Dairy<br />
-23 glenwood road<br />
-Leslie - Glenrothes<br />
-fife
-<p>KY6 3EN<br />
-</p></td>
-</tr>
-</table>
-<p>&nbsp;</p></td>
-<td width="50%"><p><b>You can also contact us direct by filling out the form 
+</body>
+</html> 
 
-                    below.</b></p>
-<form action="" method="post" name="contact" id="contact">
-  <table border="0" cellspacing="1" cellpadding="3" width="100%">
-  <tr>
-<td class="unnamed1" align="right" width="132"><div align="left"><font color="#000000"><b>Name:&nbsp;&nbsp; </b></font></div></td>
-<td width="306"><font color="#000000"> &nbsp;
-<input name="name" type="text" id="name" size="26" maxlength="50" />
-</font></td>
-</tr>
-<tr>
-<td class="unnamed1" align="right" width="132"><div align="left"><font color="#000000"><b>Email:&nbsp;&nbsp; </b></font></div></td>
-<td width="306"><font color="#000000"> &nbsp;
-<input type="text" name="email" size="26" maxlength="50" />
-</font></td>
-</tr>
-<tr>
-<td class="unnamed1" align="right" width="132"><div align="left"><font color="#000000"><b>Phone:&nbsp;&nbsp;</b></font></div></td>
-<td width="306"><font color="#000000">&nbsp;
-<input name="phone" type="text" id="phone" size="26" maxlength="50" />
-</font></td>
-</tr>
-<tr>
-<td class="unnamed1" align="right" width="132" valign="top"><div align="left"><b>Type of enquiry</b></div></td>
-<td width="306">&nbsp;
-<select name="type">
-<option value="Sales and support" selected="selected">Sales and 
-
-                            Support</option>
-<option value="Business Enquiry">Business enquiry</option>
-<option value="Service Feedback">Service Feedback</option>
-<option value="Web site feedback">Web site feedback</option>
-</select>
-</td>
-</tr>
-<tr>
-<td class="unnamed1" align="right" width="132" valign="top"><div align="left"><b><font color="#000000">Your Enquiry&nbsp;</font></b></div></td>
-<td width="306"><font color="#000000"> &nbsp;
-<textarea name="enquiry" cols="25" rows="6" wrap="virtual" id="enquiry"></textarea>
-</font></td>
-</tr>
-<tr>
-<td align="right" width="132" valign="top"><font color="#000000">&nbsp;</font></td>
-<td width="306"><font color="#000000"><b>
-<input type="submit" value="Submit" it!="it!" name="submit" />
-<input type="reset" name="Reset" value="Reset" id="FormsButton1" />
-</b> </font></td>
-</tr>
-</table>
-</form></td>
-</tr>
-</table>
-<?
-}
-?>
-</td>
-<td width="50" valign="top"><img src="images/pixel.gif" width="50" height="1" /></td>
-<td width="250" valign="top"><table width="100%" height="58" border="0" cellpadding="0" cellspacing="0">
-<tr>
-<td height="66"><img src="images/cust_login.gif" width="217" height="27" /></td>
-</tr>
-<tr>
-<td valign="top">
-
-<?
-if ($_SESSION['logged_in']<>1){
-?>
-<table  border="0" align="center" cellpadding="5" cellspacing="0">
-  <form action="https://www.cabbagehalldairy.co.uk/login.php?action=login" method="post" name="login" id="login">
-    <tr>
-      <td width="17">&nbsp;</td>
-      <td width="256"><div align="left"> Your Username: <br />
-        <input name="username" type="text" id="p_name" size="25" />
-      </div></td>
-    </tr>
-    <tr>
-      <td width="17">&nbsp;</td>
-      <td>Your Password: <br />
-        <input name="password" type="password" id="p_pass" size="25" maxlength="18" /></td>
-    </tr>
-    <tr>
-      <td width="17">&nbsp;</td>
-      <td><input type="submit" name="Submit" value="Login" /></td>
-    </tr>
-    <tr>
-      <td width="17">&nbsp;</td>
-      <td><br />
-        <table width="100%" border="0" cellspacing="0" cellpadding="1">
-          <tr>
-            <td><a href="https://www.cabbagehalldairy.co.uk/">Home Page</a></td>
-          </tr>
-        </table></td>
-    </tr>
-  </form>
-</table>
-<?
-} else {
-?>
-You are already logged in
-<br /><br />
-<?
-include ('basket.php');
-}
-?>
-<p align="center" class="style3"><br />
-</p></td>
-</tr>
-</table>
-<p class="bodytext">&nbsp;</p>
-<p class="bodytext"><br />
-</p></td>
-</tr>
-</table>
-
-<? include ('footer.php');?>
