--- a/index.html
+++ b/index.html
@@ -2,11 +2,89 @@
 <html>
 
 <head>
-<title>Home</title>
+
+<title>index</title>
+
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+
+<script language="JavaScript">
+<!--
+function MM_swapImgRestore() { //v3.0
+
+  var i,x,a=document.MM_sr; for(i=0;a&&i<a.length&&(x=a[i])&&x.oSrc;i++) x.src=x.oSrc;
+
+}
+
+
+
+function MM_preloadImages() { //v3.0
+
+  var d=document; if(d.images){ if(!d.MM_p) d.MM_p=new Array();
+
+    var i,j=d.MM_p.length,a=MM_preloadImages.arguments; for(i=0; i<a.length; i++)
+
+    if (a[i].indexOf("#")!=0){ d.MM_p[j]=new Image; d.MM_p[j++].src=a[i];}}
+
+}
+
+
+
+function MM_swapImage() { //v3.0
+
+  var i,j=0,x,a=MM_swapImage.arguments; document.MM_sr=new Array; for(i=0;i<(a.length-2);i+=3)
+
+   if ((x=MM_findObj(a[i]))!=null){document.MM_sr[j++]=x; if(!x.oSrc) x.oSrc=x.src; x.src=a[i+2];}
+
+}
+
+function MM_findObj(n, d) { //v4.01
+  var p,i,x;  if(!d) d=document; if((p=n.indexOf("?"))>0&&parent.frames.length) {
+    d=parent.frames[n.substring(p+1)].document; n=n.substring(0,p);}
+  if(!(x=d[n])&&d.all) x=d.all[n]; for (i=0;!x&&i<d.forms.length;i++) x=d.forms[i][n];
+  for(i=0;!x&&d.layers&&i<d.layers.length;i++) x=MM_findObj(n,d.layers[i].document);
+  if(!x && d.getElementById) x=d.getElementById(n); return x;
+}
+//-->
+</script>
 
 </head>
-<body>
 
+
+
+<body bgcolor="#000000" text="#000000" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" link="#FFFFFF" background="file:///C|/Users/info/Creative Cloud Files/Dreamwaever/com/public/beta/img/top_bg.gif" onLoad="MM_preloadImages('file:///C|/Users/info/Creative Cloud Files/Dreamwaever/com/public/beta/img/contact2.gif','file:///C|/Users/info/Creative Cloud Files/Dreamwaever/com/public/beta/img/services1.gif','file:///C|/Users/info/Creative Cloud Files/Dreamwaever/com/public/beta/img/milk2.gif','file:///C|/Users/info/Creative Cloud Files/Dreamwaever/com/public/beta/img/gallery2.gif')">
+<table width="760" border="0" cellspacing="0" cellpadding="0">
+  <tr> 
+    <td width="435"> <img src="file:///C|/Users/info/Creative Cloud Files/Dreamwaever/com/public/beta/images/cabbagehall.logo.jpg" width="678" height="121"></td>
+    <td width="337" valign="top"><img src="../../logo.gif" width="242" height="77" alt=""/></td>
+  </tr>
+</table>
+<table width="100%" border="0" cellspacing="0" cellpadding="0">
+  <tr> 
+    <td height="65"><a href="https://www.cabbagehalldairy.co.uk"><img src="file:///C|/Users/info/Creative Cloud Files/Dreamwaever/com/public/beta/img/home1.gif" name="home111" width="57" height="26" border="0" id="home11"></a><a href="file:///C|/Users/info/Creative Cloud Files/Dreamwaever/com/public/beta/gallery.html" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('gallery111','','file:///C|/Users/info/Creative Cloud Files/Dreamwaever/com/public/beta/img/gallery2.gif',1)" target="0"><img src="file:///C|/Users/info/Creative Cloud Files/Dreamwaever/com/public/beta/img/gallery1.gif" name="gallery111" width="86" height="26" border="0" id="gallery11"></a><img src="file:///C|/Users/info/Creative Cloud Files/Dreamwaever/com/public/beta/img/services2.gif" name="services111" width="79" height="26" border="0" id="services11"><a href="https://www.cabbagehalldairy.co.uk/shopping.php"><img src="file:///C|/Users/info/Creative Cloud Files/Dreamwaever/com/public/beta/images/cust1.gif" name="cust" width="129" height="26" border="0"></a><a href="https://www.paypal.me/cabbagehall"><img src="file:///C|/Users/info/Creative Cloud Files/Dreamwaever/com/public/beta/images/pay1.gif" name="payment" width="129" height="27" border="0"></a><a href="https://www.cabbagehalldairy.co.uk/milk.php" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('milk111','','file:///C|/Users/info/Creative Cloud Files/Dreamwaever/com/public/beta/img/milk2.gif',1)" target="0"><img src="file:///C|/Users/info/Creative Cloud Files/Dreamwaever/com/public/beta/img/milk1.gif" name="milk111" width="45" height="26" border="0" id="milk11"></a><a href="https://www.cabbagehalldairy.co.uk/contact.php" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('contact111','','file:///C|/Users/info/Creative Cloud Files/Dreamwaever/com/public/beta/img/contact2.gif',1)" target="0"><img src="file:///C|/Users/info/Creative Cloud Files/Dreamwaever/com/public/beta/img/contact1.gif" name="contact111" width="73" height="26" border="0" id="contact11"></a></td>
+  </tr>
+</table>
+<table width="913" height="222" border="1">
+  <tbody>
+    <tr>
+      <td width="147"><img src="../../milkdrink2.jpg.jpg" width="137" height="170" alt=""/></td>
+      <td width="721">&nbsp;</td>
+      <td width="23">&nbsp;</td>
+    </tr>
+    <tr>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+    </tr>
+    <tr>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+      <td>&nbsp;</td>
+    </tr>
+  </tbody>
+</table>
+<p>&nbsp;</p>
 </body>
-</html> 
+
+</html>
+
 
